[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Areas/AreaTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Areas/TheCamp/TheCamp.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="TheCamp" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="YouAreAtLabel" parent="." index="0"]
text = "You are at 
The Camp"

[node name="TravelButton" parent="ScrollContainer/VBoxContainer" index="0"]
margin_bottom = 38.0

[node name="BaitShop" type="Button" parent="ScrollContainer/VBoxContainer" index="1"]
margin_top = 42.0
margin_right = 143.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Bait Shop"

[node name="RodSmith" type="Button" parent="ScrollContainer/VBoxContainer" index="2"]
margin_top = 84.0
margin_right = 143.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Rodsmith"

[node name="CartographerButton" type="Button" parent="ScrollContainer/VBoxContainer" index="3"]
visible = false
margin_top = 105.0
margin_right = 143.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Cartographer"

[node name="TrainerButton" type="Button" parent="ScrollContainer/VBoxContainer" index="4"]
margin_top = 126.0
margin_right = 143.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Trainer"

[node name="Loadout" type="Button" parent="ScrollContainer/VBoxContainer" index="5"]
margin_top = 168.0
margin_right = 143.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Loadout"
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BaitShop" to="." method="_on_BaitShop_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/RodSmith" to="." method="_on_RodSmith_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CartographerButton" to="." method="_on_CartographerButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/TrainerButton" to="." method="_on_TrainerButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout" to="." method="_on_Loadout_pressed"]
